<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    tools:context=".AddProductFragment">

    <EditText
        android:id="@+id/edit_text_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/product_name_edit_text"
        android:minHeight="48dp"
        android:padding="2dp"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/edit_text_product_kcal"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="22dp"
        android:hint="@string/product_calories"
        android:minHeight="48dp"
        android:padding="2dp"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toStartOf="@+id/edit_text_product_portion"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_product_name" />

    <EditText
        android:id="@+id/edit_text_product_portion"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/portion_weight"
        android:minHeight="48dp"
        android:padding="2dp"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/edit_text_product_kcal"
        app:layout_constraintTop_toBottomOf="@id/edit_text_product_name" />


    <EditText
        android:id="@+id/edit_text_product_proteins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="22dp"
        android:hint="@string/edit_text_product_proteins"
        android:minHeight="48dp"
        android:padding="2dp"
        android:inputType="numberDecimal"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_product_kcal" />

    <EditText
        android:id="@+id/edit_text_product_fats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="22dp"
        android:hint="@string/edit_text_product_fats"
        android:minHeight="48dp"
        android:padding="2dp"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toStartOf="@id/edit_text_product_carbs"
        app:layout_constraintStart_toEndOf="@id/edit_text_product_proteins"
        app:layout_constraintTop_toBottomOf="@id/edit_text_product_kcal"
        tools:layout_editor_absoluteX="337dp" />

    <EditText
        android:id="@+id/edit_text_product_carbs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="22dp"
        android:hint="@string/edit_text_product_carbs"
        android:minHeight="48dp"
        android:padding="2dp"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_product_kcal"
        tools:layout_editor_absoluteX="285dp" />

    <Button
        android:id="@+id/button_save_changes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="22dp"
        android:minHeight="48dp"
        android:padding="2dp"
        android:text="@string/button_save_product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_product_carbs" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="28dp"
        android:layout_marginTop="22dp"
        android:minHeight="48dp"
        android:padding="2dp"
        android:text="@string/button_cancel"
        app:layout_constraintEnd_toStartOf="@id/button_save_changes"
        app:layout_constraintTop_toBottomOf="@id/edit_text_product_fats" />

    <TextView
        android:id="@+id/parameters_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="2dp"
        android:text="@string/text_product_parameters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_cancel" />
</androidx.constraintlayout.widget.ConstraintLayout>