<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="4dp"
    app:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/product_name"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/product_default_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/weight_placeholder"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/product_portion_calories" />

        <TextView
            android:id="@+id/product_portion_calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:padding="2dp"
            android:text="@string/product_portion_calories"
            android:textSize="16sp"
            app:flow_verticalBias="50"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/product_proteins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:padding="2dp"
            android:text="@string/proteins_letter_placeholder"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_default_weight" />


        <TextView
            android:id="@+id/product_fats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:padding="2dp"
            android:text="@string/fats_letter_placeholder"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/product_proteins"
            app:layout_constraintStart_toEndOf="@id/product_proteins"
            app:layout_constraintTop_toTopOf="@id/product_proteins" />


        <TextView
            android:id="@+id/product_carbs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:padding="2dp"
            android:text="@string/carbs_letter_placeholder"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/product_proteins"
            app:layout_constraintStart_toEndOf="@id/product_fats"
            app:layout_constraintTop_toTopOf="@id/product_proteins" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>