<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    tools:context=".dishscreens.editdishscreen.EditDishFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_dish_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:baselineAligned="false"
        android:hint="@string/product_name_edit_text"
        android:orientation="horizontal"
        android:padding="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:minHeight="48dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_dish_kcal"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginVertical="22dp"
        android:gravity="center"
        android:padding="2dp"
        android:text="@string/product_calories"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_dish_fats" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_product_portion"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="8dp"
        android:baselineAligned="false"
        android:hint="@string/portion_weight"
        android:orientation="horizontal"
        android:padding="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_dish_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_product_portion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:minHeight="48dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_dish_proteins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="22dp"
        android:hint="@string/product_proteins"
        android:minWidth="100dp"
        android:padding="2dp"
        android:textSize="16sp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/parameters_text" />


    <TextView
        android:id="@+id/text_dish_fats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="22dp"
        android:hint="@string/product_fats"
        android:minWidth="100dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/text_dish_carbs"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/text_dish_proteins"
        app:layout_constraintTop_toBottomOf="@id/parameters_text" />


    <TextView
        android:id="@+id/text_dish_carbs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="22dp"
        android:hint="@string/product_carbs"
        android:minWidth="100dp"
        android:padding="2dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@id/parameters_text" />

    <TextView
        android:id="@+id/parameters_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="2dp"
        android:text="@string/text_parameters_dish_portion"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_product_portion" />


    <Button
        android:id="@+id/button_save_changes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="22dp"
        android:minHeight="48dp"
        android:padding="2dp"
        android:text="@string/button_save_product"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="28dp"
        android:layout_marginTop="22dp"
        android:minHeight="48dp"
        android:padding="2dp"
        android:text="@string/button_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_save_changes" />

    <TextView
        android:id="@+id/text_ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="100dp"
        android:text="@string/ingredients"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_dish_kcal" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ingredients_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="22dp"
        android:layout_weight="1"
        android:gravity="top"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/button_save_changes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_ingredients"
        app:spanCount="2" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_go_to_select_product_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toTopOf="@id/button_save_changes"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>