<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="4dp"
    app:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/dish_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/product_name"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dish_portion_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/product_portion_weight"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/dish_portion_calories" />

        <TextView
            android:id="@+id/dish_portion_calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:padding="2dp"
            android:text="@string/product_portion_calories"
            android:textSize="16sp"
            app:flow_verticalBias="50"
            app:layout_constraintBottom_toBottomOf="@id/dish_options_button"
            app:layout_constraintEnd_toStartOf="@id/dish_options_button"
            app:layout_constraintTop_toTopOf="@id/dish_options_button" />

        <ImageButton
            android:id="@+id/dish_options_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/transparent"
            android:padding="4dp"
            android:src="@drawable/ic_delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription,HardcodedText,SpeakableTextPresentCheck" />


        <TextView
            android:id="@+id/dish_proteins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:padding="2dp"
            android:text="@string/product_proteins"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dish_portion_weight" />


        <TextView
            android:id="@+id/dish_fats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:padding="2dp"
            android:text="@string/product_fats"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/dish_proteins"
            app:layout_constraintStart_toEndOf="@id/dish_proteins"
            app:layout_constraintTop_toTopOf="@id/dish_proteins" />


        <TextView
            android:id="@+id/dish_carbs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:padding="2dp"
            android:text="@string/product_carbs"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/dish_proteins"
            app:layout_constraintStart_toEndOf="@id/dish_fats"
            app:layout_constraintTop_toTopOf="@id/dish_proteins" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>